--- a/gaming.html
+++ b/gaming.html
@@ -1539,40 +1539,41 @@ mobile games i recommend
 <div class="tooltip">
 <div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden; text-align: justify;">
 <div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
-well, i like to test random mobile games and sometimes i find very nice stuff ! these are for android, but i think you can find some of them on ios too.
+well, i like to test random mobile games and sometimes i find very nice stuff ! these are for android, but i think you can find some of them on ios too.<br>
+<b>edit //</b> i added links for every game, just click the images and you'll go to an app store where you can download the game !!
 </div>
 <br><br><center>
-<img width="170" height="auto" src="https://i.imgur.com/oMnbWZZ.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/5eldZv6.png"/> <img width="170" height="auto" src="https://i.imgur.com/r0HNSYX.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/eA8664B.png"/> <img width="170" height="auto" src="https://i.imgur.com/YCYQdsN.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/3zzNy62.png"/> <img width="170" height="auto" src="https://i.imgur.com/MH7P7qf.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/QY8GRGo.png"/> <img width="170" height="auto" src="https://i.imgur.com/MPrPPlb.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/xhoAi2u.png"/> <img width="170" height="auto" src="https://i.imgur.com/XRsbim9.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/q8U9fev.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/cydayxP.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/3r0icQC.png"/> <img width="170" height="auto" src="https://i.imgur.com/rxtulPG.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/1g24joL.png"/> <img width="170" height="auto" src="https://i.imgur.com/xBxsCuS.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/EAKWo5B.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/6R8l7by.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/lt2zVIe.png"/> <img width="170" height="auto" src="https://i.imgur.com/NhFRz6Z.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/hw2emch.png"/> <img width="170" height="auto" src="https://i.imgur.com/K6oeSIY.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/phZYTxP.png"/> <img width="170" height="auto" src="https://i.imgur.com/AHSdotw.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/TmLGYpL.jpg"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/Yi0lVT6.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/S9YbJ7S.png"/> <img width="170" height="auto" src="https://i.imgur.com/gZxebsv.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/kgfbPlJ.png"/> <img width="170" height="auto" src="https://i.imgur.com/AJl1QXu.jpg"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/nRwoTUo.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/50Y9hBF.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/2t54VSj.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/mW2jySl.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/BMgnNKT.png"/> <img width="170" height="auto" src="https://i.imgur.com/7cdbY9r.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/vcPtPxk.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/4YbldG9.png"/> <img width="170" height="auto" src="https://i.imgur.com/qzDFlWD.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/11Ing5l.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/UrJqck3.png"/> <img width="170" height="auto" src="https://i.imgur.com/5658aiF.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/PGwlGY5.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/tqKKcnu.png"/><br><br>
-<img width="170" height="auto" src="https://i.imgur.com/nYOTx8d.png"/>
+<a href="https://play.google.com/store/apps/details?id=com.pulsmo.StrayCatDoors" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/oMnbWZZ.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.wooga.sumikko_jp" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/5eldZv6.png"/></a> <a href="https://play.google.com/store/apps/details?id=com.seyeonsoft.pastel" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/r0HNSYX.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.joxdev.orbia" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/eA8664B.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.balysv.loop" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/3zzNy62.png"/></a> <a href="https://apkpure.com/jp/%E3%83%90%E3%83%96%E3%83%AB%E3%83%91%E3%83%86%E3%82%A3-%E3%80%90%E7%94%98%E3%81%8B%E3%82%8F%E3%81%84%E3%81%84%E7%84%A1%E6%96%99%E3%81%AE%E3%83%91%E3%82%BA%E3%83%AB%E3%82%B2%E3%83%BC%E3%83%A0%E3%80%91/tokyo.seec.BubblePatissier" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/MH7P7qf.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.zutgames.ilovehue" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/QY8GRGo.png"/></a> <a href="https://play.google.com/store/apps/details?id=exize.tapas.girlAdrift" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/MPrPPlb.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.rayark.uproot" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/xhoAi2u.png"/></a> <a href="https://apkpure.com/es/%E6%9C%AC%E5%BD%93%E3%81%AF%E6%80%96%E3%81%84%E3%81%8A%E4%BA%BA%E5%BD%A2%E3%81%AE%E8%A9%B1/tokyo.seec.ikuseiDoll" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/XRsbim9.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.QSSUMSTUDIO.FeeDog" target="_blank"><img width="300" height="auto" src="https://i.imgur.com/q8U9fev.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.movingstudio.stars" target="_blank"><img width="300" height="auto" src="https://i.imgur.com/cydayxP.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.PrismaThunder.Springfairy" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/3r0icQC.png"/></a> <a href="https://play.google.com/store/apps/details?id=com.movingstudio.ilikebeingwithyou" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/rxtulPG.png"/></a><br><br>
+<a href="https://apkpure.com/jp/air-kitty/okinawa.harapeco.airKitty" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/1g24joL.png"/></a> <a href="https://play.google.com/store/apps/details?id=com.ThreeCatGames.ThisCell" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/xBxsCuS.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.movingstudio.misswind" target="_blank"><img width="300" height="auto" src="https://i.imgur.com/EAKWo5B.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=jp.co.ofcr.cm00" target="_blank"><img width="300" height="auto" src="https://i.imgur.com/6R8l7by.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=jp.united.app.kanahei.game.turnip" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/lt2zVIe.png"/></a> <a href="https://play.google.com/store/apps/details?id=jp.co.overfence.mitchirinekodash" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/NhFRz6Z.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.loadcomplete.sheepindream" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/hw2emch.png"/></a> <a href="https://play.google.com/store/apps/details?id=jp.co.bbb.zombienekosushi" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/K6oeSIY.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=jp.whrp.sweets" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/phZYTxP.png"/></a> <a href="https://play.google.com/store/apps/details?id=net.otouch.koro" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/AHSdotw.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.microids.HdOv25.HdOAlice.freemium" target="_blank"><img width="300" height="auto" src="https://i.imgur.com/TmLGYpL.jpg"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=air.com.pandazone.littleredhood" target="_blank"><img width="300" height="auto" src="https://i.imgur.com/Yi0lVT6.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.escape.ikuseialice" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/gZxebsv.png"/></a><br><br>
+<a href="https://apkpure.com/%E7%9C%A0%E3%82%8A%E3%81%BF%E3%82%8B%E7%89%A9%E8%AA%9E%E3%80%9C%E5%A4%A2%E8%A6%8B%E3%82%8B%E5%B0%91%E5%A5%B3%E3%81%A8%E3%81%8A%E3%81%A8%E3%81%8E%E8%A9%B1%E3%80%9C%E3%80%90%E7%84%A1%E6%96%99%E8%82%B2%E6%88%90%E3%82%B2%E3%83%BC%E3%83%A0%E3%80%91/com.aduni.yumemono" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/kgfbPlJ.png"/></a> <a href="https://play.google.com/store/apps/details?id=com.escape.alice" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/AJl1QXu.jpg"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.maasama.treesantwo" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/nRwoTUo.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=jp.gree.greeappel" target="_blank"><img width="300" height="auto" src="https://i.imgur.com/50Y9hBF.png"/></a><br><br>
+<a href="https://apkpure.com/44-chairs/com.goldlog.mychair" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/2t54VSj.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.com2us.elpise.normal.freefull.google.global.android.common" target="_blank"><img width="300" height="auto" src="https://i.imgur.com/mW2jySl.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.spryfox.alphabear" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/BMgnNKT.png"/></a> <a href="https://play.google.com/store/apps/details?id=com.com2us.minigameparadise.normal.freefull.google.global.android.common" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/7cdbY9r.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.fourdesire.plantnanny" target="_blank"><img width="300" height="auto" src="https://i.imgur.com/vcPtPxk.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.ismaker.android.simsimi" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/4YbldG9.png"/></a> <a href="https://play.google.com/store/apps/details?id=com.com2us.puzzlefamily.up.freefull.google.global.android.common" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/qzDFlWD.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.inline.reinoyousugaokashii" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/11Ing5l.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=com.IceWaterGames.Viridi" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/UrJqck3.png"/></a> <a href="https://play.google.com/store/apps/details?id=com.hoge.akazukin" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/5658aiF.png"/></a><br><br>
+<a href="https://apkpure.com/br/%E6%9D%B1%E6%96%B9-%E3%81%B1%E3%81%9F%E3%81%B1%E3%81%9F%E3%83%95%E3%83%A9%E3%83%B3%EF%BD%9E%E7%84%A1%E6%96%99%E6%9A%87%E3%81%A4%E3%81%B6%E3%81%97%E3%82%B2%E3%83%BC%E3%83%A0%EF%BD%9E/com.Flansou" target="_blank"><img width="300" height="auto" src="https://i.imgur.com/PGwlGY5.png"/></a><br><br>
+<a href="https://play.google.com/store/apps/details?id=net.mobigame.zombietsunami" target="_blank"><img width="300" height="auto" src="https://i.imgur.com/tqKKcnu.png"/></a><br><br>
+<a href="https://apkpure.com/tw/%E6%94%BE%E7%BD%AE%E8%82%B2%E6%88%90%E3%82%B2%E3%83%BC%E3%83%A0-%E8%B5%A4%E3%81%9A%E3%81%8D%E3%82%93%EF%BD%9E%E9%96%8B%E3%81%8B%E3%81%9A%E3%81%AE%E6%A3%AE%E3%81%AE%E7%89%A9%E8%AA%9E%EF%BD%9E/tokyo.seec.ikuseiAkazukin" target="_blank"><img width="170" height="auto" src="https://i.imgur.com/nYOTx8d.png"/></a>
 </center>
 <br><br>
 </div>
