--- a/faq.html
+++ b/faq.html
@@ -613,7 +613,7 @@ so, as you can see, those words can be used without sexual connotation, but beca
 
 <a name="numbers" id="numbers"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　why don't i want any more numbers ?</font><br><br><br>
-<font color="#d8b9af">　( october . 18 . 2018 )</font>
+<font color="#d8b9af">　( october . 18 . 2018 + february . 08 . 2019 )</font>
 <br><br>
 <font color="#B1A69E">
 since i wrote my "honest post" to you i reflected a lot about my attitudes. whenever i write something i do it initially to improve myself. i changed the way i treat my photos, i felt the need to clarify a lot of confusing things for you about personality and behavior that might be useful.. but i still felt very upset about the numbers on that site.<br>
@@ -628,6 +628,25 @@ i felt free from this race for numbers as i moved away from social media, and i 
 so, i removed the feedback buttons from all the pages of the site ( except, of course, from the archives ) and made some changes to the layouts ( because i'm inspired ). i removed the hit counter from the index, although i still know how many ips visits my site, this is more for technical information. i'm going to increase the frequency with which the chat is open, so i decided to keep only one of them, moving the messages and smilies from the look book chat to the main chat, so i can have more control over it. consider these changes as a purification, it's extremely invigorating to be free of ego needs and social fears ~<br>
 i hope hiding the numbers and keeping the written feedback in evidence is more productive for me and for you ! i wish from the bottom of my heart that you participate more avidly in this site, and not in the form of numbers, but as wonderful and real angels, which is what you are to me. ♡<br>
 ( remembering that i love exchanging long emails and letters, so be sure to get in touch with me at letters@middlepot.com if you want to talk to me )<br>
+<br>
+<b> edit //</b> i'm little by little getting more and more clean of the "numbers", and it's making me feel really good and refreshed.. !<br>
+now i officially got rid of all of my social media with big follower numbers. yes, i did my best there, i spent time and effort posting content, but now it's time to refresh things.<br>
+i was just really tired of all of this.. random strangers following me just because of a random viral post, creeps messaging me, my accs turning to feel important and platforms treating it like nothing.. so stressful !!<br>
+i writed my reasons, and i honestly think these changes are an improvement for me and the quality of my content ♡<br>
+even if not using social media for posting personal content, it's still the best way to reach people and make friends. this is what i wanted, from the begin, and just now i'm being able to actually reach people's hearts !<br>
+the thing is,, my accs with lots of random people and artificial interactions were consuming my patience and time and i couldn't actually interact with others because it wasn't even safe to try approaching them ; people were also thinking i was distant and hard to approach. i want to have more time for healthy relationships and for myself.<br>
+now with my new accs i want to be more spontaneous and helpful to others, i want to make friends and approach people safely, i want to be able to interact with my friends and be there for everyone who needs me, i want to support people i admire and i want it to be soft !! i want my life to be softer, in general.<br>
+i'm happy to say that this is becoming reality ♡<br>
+i'm ironically being able to reach a higher number of people now than before, not with just cute stuff but my feelings too, and i believe it's because i'm doing better and being more sincere. i now can say i truly care about every single people that interact with my posts, because i can actually enter their accs and see they're trying their best too !!<br>
+this is what being "mutuals" means to me : to have our hearts connected by the same motivation and energies. even if i am not in fact "mutuals" with all my followers, i always look at their profile and check from time to time if they are active and if they are good people. i don't want ghost followers and people who never care about my content, i'm going to try to keep a proportion of followers and interactions as reasonable as possible from now on ! my large accounts always had infinitely less interactions than the number of followers, which means that obviously many of those accounts were inactive or people who didn't even care about who they're following. i don't want it anymore. i want real people, a comfortable and safe ambient for me and everyone ! the internet can be a place full of illusions. i believe the numbers are one of the most dangerous illusions.<br>
+i feel lighthearted now, and i'm being able to communicate with others better and doing what i wanted from the begin : reaching your hearts and soften your feelings !<br>
+i couldn't do it if my heart wasn't soft, right ?<br>
+i feel softer now.. i'm happy life made me see how artificial and unnecessary all these numbers are. i learned that real people are important ; kind and lovely people, who will be there. ♡<br>
+and i will be there, too ! even with the distance, i am here.<br>
+<br>
+i hope i can inspire you to improve your internet life, too..<br>
+is it really healthy and safe for you, right now ?<br>
+
 <br><br><br><br><br><br>
 </font>
 
