--- a/blog.html
+++ b/blog.html
@@ -365,6 +365,98 @@ font-family: Verdana;
 
 <br>
 
+<center><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>february . 08 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <img src="https://i.imgur.com/WBtDHoi.gif"/><br>
+so many things have happened in last weeks .. i'm a little overwhelmed, even ; ;<br>
+but i'm trying my best to rest and respect my relaxing time !!<br>
+it's always hard keeping a routine and schedules, since my body and my mind not always agree with what i'm supposed to do.. but this is also part of a healthy routine !<br>
+sometimes we need to adapt the schedule to respect our time and not get too tired.<br>
+it's actually common for me to have a full lazy day and the next day i feel super motivated to do all tasks for three days.. !<br>
+the important thing is to not pressure myself to follow the routine 100%, since it's supposed to be helpful and not a bother. if i'm doing my weekly tasks and resting properly, everything is ok !!<br>
+<br>
+so .. you may have noticed some very "drastic" changes in all my social media,,<br>
+i was already making a sort of cleaning, but this time.. i just couldn't keep doing it.<br>
+i decided to finally stop this pain and actually delete my accounts and make new ones !<br>
+i have now new accounts for my "not bad" project ; my social media accs <img src="https://i.imgur.com/PCwccpM.gif"/><br>
+i mean, only my tumblr blogs are the same, but i changed urls : now it's @pufti and @pofti, which is really cute and match ( for real now )<br>
+as you already know, i don't use social media for personal content but to post actual helpful stuff.. maybe not thaaat helpful but i always try to post things that can be inspiring, motivational or just make someone's day a little better <img src="https://i.imgur.com/7FmAlHc.gif"/><br>
+my old accounts were not really making this project work very well.. but well, i'll write more about this in the q&a !<br>
+( i already made the necessary edits in the faq and the project page )<br>
+<br>
+it took me a while to know what i should post on my new instagram acc, since i would like it to be something original and helpful ..<br>
+i was thinking of using it as a "spam" acc, but my posts ended up being more helpful than i expected,, so it ended up becoming a "self care" acc !<br>
+my posts are all stuffies and the next slides are screenshots from the "help" page of my site ( yes, thiiis one )<br>
+i always wanted these tips to reach more people, and since not everyone is used to personal websites and stuff, this was a good way for me to actually help more people !!<br>
+<br><br>
+
+<center><img width="300px" height="auto" src="https://i.imgur.com/hhL5YZt.png"/></center>
+
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+isn't it cute ? i'm proud .. ; ;<br>
+my acc is full of friends and mutuals that i love very much.. ! many precious and sweet people. <img src="https://i.imgur.com/T6GBoM4.gif"/><br>
+i want to keep it a healthy and safe environment there. i want to motivate them to be happier and feel valid !!<br>
+<br>
+i also started doing "story games" and even a "mood calendar" to entertain everyone while helping them with self improvement !<br>
+i used the "small moments" once and the "mood calendar" for a week, but i don't think i'll continue using them myself since i'm making a new diary where i'll write things down in a more private way <img src="https://i.imgur.com/73rqGP2.gif"/><br>
+<br><br>
+
+<center><img width="300px" height="auto" src="https://i.imgur.com/QWm8Eg7.gif"/></center>
+<br><br>
+<center><img width="300px" height="auto" src="https://i.imgur.com/77Z0WH4.png"/></center>
+
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+modesty aside, i honestly think it became much prettier than i expected ..<br>
+and i'm so happy because my aesthetic is inspiring other people !!<br>
+i always feel my heart warm when i see that people are being inspired by me ///<br>
+<br>
+today, the text will be about this renewal of my internet life !<br>
+a complement to a text i've written before, about "numbers".<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+i'm little by little getting more and more clean of the "numbers", and it's making me feel really good and refreshed.. !<br>
+now i officially got rid of all of my social media with big follower numbers. yes, i did my best there, i spent time and effort posting content, but now it's time to refresh things.<br>
+i was just really tired of all of this.. random strangers following me just because of a random viral post, creeps messaging me, my accs turning to feel important and platforms treating it like nothing.. so stressful !!<br>
+i writed my reasons, and i honestly think these changes are an improvement for me and the quality of my content ♡<br>
+even if not using social media for posting personal content, it's still the best way to reach people and make friends. this is what i wanted, from the begin, and just now i'm being able to actually reach people's hearts !<br>
+the thing is,, my accs with lots of random people and artificial interactions were consuming my patience and time and i couldn't actually interact with others because it wasn't even safe to try approaching them ; people were also thinking i was distant and hard to approach. i want to have more time for healthy relationships and for myself.<br>
+now with my new accs i want to be more spontaneous and helpful to others, i want to make friends and approach people safely, i want to be able to interact with my friends and be there for everyone who needs me, i want to support people i admire and i want it to be soft !! i want my life to be softer, in general.<br>
+i'm happy to say that this is becoming reality ♡<br>
+i'm ironically being able to reach a higher number of people now than before, not with just cute stuff but my feelings too, and i believe it's because i'm doing better and being more sincere. i now can say i truly care about every single people that interact with my posts, because i can actually enter their accs and see they're trying their best too !!<br>
+this is what being "mutuals" means to me : to have our hearts connected by the same motivation and energies. even if i am not in fact "mutuals" with all my followers, i always look at their profile and check from time to time if they are active and if they are good people. i don't want ghost followers and people who never care about my content, i'm going to try to keep a proportion of followers and interactions as reasonable as possible from now on ! my large accounts always had infinitely less interactions than the number of followers, which means that obviously many of those accounts were inactive or people who didn't even care about who they're following. i don't want it anymore. i want real people, a comfortable and safe ambient for me and everyone ! the internet can be a place full of illusions. i believe the numbers are one of the most dangerous illusions.<br>
+i feel lighthearted now, and i'm being able to communicate with others better and doing what i wanted from the begin : reaching your hearts and soften your feelings !<br>
+i couldn't do it if my heart wasn't soft, right ?<br>
+i feel softer now.. i'm happy life made me see how artificial and unnecessary all these numbers are. i learned that real people are important ; kind and lovely people, who will be there. ♡<br>
+and i will be there, too ! even with the distance, i am here.<br>
+<br>
+i hope i can inspire you to improve your internet life, too..<br>
+is it really healthy and safe for you, right now ?<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/PinvYCN.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/></center>
+
+<br><br><br>
+
 <center><img width="200px" height="auto" src="https://i.imgur.com/1ZLDltw.png"/><img width="200px" height="auto" src="https://i.imgur.com/1ZLDltw.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -587,111 +679,6 @@ xoxo <img src="https://i.imgur.com/hqun0bM.gif"/><br>
 <br>
 
 <center><img src="https://i.imgur.com/B3llkOg.gif"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/pdYOGop.gif"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>december . 13 . 2018</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <img src="https://i.imgur.com/57rSlgO.gif"/><br>
-i feel absolutely soft these days ~<br>
-i have learned a lot about patience and self control, but mostly about self care !<br>
-i'm pretty anxious when it comes to being productive, i'd say i'm almost addicted to that sense of accomplishment after having a busy day.<br>
-the problem is that i always felt useless when i was in my spare time ; ;<br>
-this is not healthy, so i'm trying my best to respect the free hours of my day as much as the working hours, after all, both are important <img src="https://i.imgur.com/Ayl9a7S.gif"/><br>
-i'm also feeling that i'm getting more and more free of the "physical" things... even though they really matter to me, i know that too much bonding to them emotionally makes me feel needy easily, which is not good at all !<br>
-it is definitely essential to remember that the most important things are not physical, because naturally, what makes us feel like home is where our heart is, not our body <img src="https://i.imgur.com/YYQfh8r.gif"/><br>
-<br>
-aaa i would like to comment on this super cute app that i'm really enjoying, custom cast ♡ !!<br>
-it's the best 3D character customization app i've ever used !<br>
-i'm really enjoying this vtuber thing lately, it's really cute and a lot of new fun possibilities are popping up.<br>
-do you like vtubers too ? i love them ♡ !!!<br>
-i made myself in this app :<br>
-<br><br>
-
-<center><img width="300px" height="auto" src="https://i.imgur.com/zBIzM0B.png"/></center>
-
-</font></font></font>
-<br>
-<font size = 1><font color="#B1A69E">
-<br><br>
-this is an outfit i would absolutely wear irl, with strawberry perfume <img src="https://i.imgur.com/VZYwhTs.gif"/><br>
-<sub>( the skirt is a lil bit weird, tho )</sub><br>
-<br>
-i'm intending to start playing cocoppa play again, i think i'll start next year..<br>
-i really miss playing some online dress up games !<br>
-<br>
-now i would like to show you a very round & extremely adorable little bunny that i felted ♡<br>
-<br><br>
-
-<center><img width="300px" height="auto" src="https://i.imgur.com/Efwneon.png"/></center>
-<br><br>
-<center><img width="300px" height="auto" src="https://i.imgur.com/r0aJGCb.png"/></center>
-
-</font></font></font>
-<br>
-<font size = 1><font color="#B1A69E">
-<br><br>
-she's just perfect and i love her very much ///<br>
-she has already been adopted, so she is in that moment in her comfy new home receiving lots of love <img src="https://i.imgur.com/A37PcCT.gif"/><br>
-<br>
-and finally, my new cell phone decorated <img src="https://i.imgur.com/KsmuW70.gif"/><br>
-you maybe have seen this case already in my portfolio or in my store, but i never showed how i decorated my phone inside, so it's new !<br>
-<br><br>
-
-<center><img width="350px" height="auto" src="https://i.imgur.com/b1o0N4O.png"/></center>
-<br><br>
-<center><img width="300px" height="auto" src="https://i.imgur.com/KCAy3y8.png"/></center>
-<br><br>
-<center><img width="300px" height="auto" src="https://i.imgur.com/AkMrPSM.png"/></center>
-
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br>
-my ult fav aesthetic, i adore it ♡ ♡ ♡<br>
-<br>
-today, double q&a !<br>
-first subject is about trauma coping issues, second one about virtual world issues.<br>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
-<br><br>
-　ణ ⅰ<br>
-this subject is very specific but i feel i should express myself about it, since i see many people with weird and even disgusting kinks, aesthetics or artistic expressions, justifying it as a way of "coping trauma". i don't particularly think it's completely wrong, but very controversial and dangerous.<br>
-i follow some trauma blogs and i see many toxic people in this environment, as well as people who are harmed or treated bad for posting controversial stuff.<br>
-any kind of trauma or sensitivity to some bad, disgusting, dangerous, ugly subjects in general can become an obstacle in people's lives. no one wants to feel dirty or bad. it is natural trying to deal with such experiences or thoughts ; trying to romanticize, normalize, or even sexualizate. we want to see beauty and pleasure in ugly things so we don't feel rejection for them and for ourselves and our bad memories, but obviously we need to take responsibility for this type of action and specify the motives, inform people of the problems and risks and not treat as something cute and casual. it's not the kind of content you have the right to post anywhere or spread around the world, no matter how traumatized you are. you have NO RIGHT to bother other people with your confused and romanticized content.<br>
-people usually deal with this sort of thing in the form of art, aesthetics and even kinks, there are people who do ugly romanticized things to become their aesthetic and way of life as a way of coping with trauma. this is something natural and there is usually no intention to hurt someone, just to make things simpler ; the problem is that this kind of attitude should not be treated as something simple. people who do this kind of art, people who post on this kind of aesthetics, people who live such lives should not spread to the world what they do as if it were something beautiful and desirable. this type of content, which has "damaged innocence", are something very sensitive, that i support, because they have already helped me a lot, but within specific communities and treated properly, as something very delicate and dangerous.<br>
-if you're not aware of what you're doing you can put yourself in danger situations intentionally to try to confront your fears and this is not at all healthy or acceptable, depending on your condition. this is one side where self diagnosis can be dangerous because you really can't handle extreme things in an extreme way without having proper help, but i've already written about that subject. i've also commented about how kinks being treated as a cute and cool "aesthetic" and spread over the internet is a bad thing for influencing young people and being harmful to other people.<br>
-when i say that these processes of romanticizing helped me, it is true, it helped me a lot at a time that i was feeling very insecure and dirty because of my sometimes weird, dangerous and controversial desires. i was embarrassed to talk to anyone about it and this kind of romanticized content helped me a lot to understand that i was not a bad person by feeling what i felt, but more importantly, i was educated to know that even though it was "normal" it was not necessarily a right thing to do, or something to be proud of. so it has always been a secret and helped me to mature. over time, i could better understand what i felt and separate harmful things from healthy ones, and so be able to have a better lifestyle ( please don't ask me details about it, it makes me very uncomfortable /// ). it would be extremely hypocritical if i said that romanticizing is always bad, i just think that caution and instructions for such content are fundamental, to prevent this from being a bad influence and worsen people's mental health.<br>
-i don't think people really need to have gone through physical traumas to have the "right to coping", that's a very disrespectful opinion ; everyone has the right to overcome their fears and problems, the problem is that when you do it publicly and treat it as something soft and romantic, such as a "broken doll" or "fallen angel", other people are harmed because they will put themselves in danger intentionally and consequently end up traumatized as well.<br>
-finally, again, i confirm that i don't think it's wrong to romanticize things or even sexualize them if it makes you feel better, but it is something extremely personal and delicate that must be done with caution and with the notion that suffering is not nice. it may be poetically beautiful, interesting, but it's not something that anyone should desire as it's dangerous and harmful.<br>
-and anyway, i think it's good to consult professional help to know if you are coping in a healthy way because each person has particularities when dealing with this type of thing ! please stay safe ♡<br>
-<br>
-<br>
-<br>
-　ణ ⅱ<br>
-as you know, i am very involved with the "virtual world". the internet is part of my life and many of my works are digital. even so, i highly value the caution in creating a "virtual identity" just as i think it's sorely primordial to avoid spending too much time on the internet and overvalue the virtual world.<br>
-i learned over time that the virtual world may seem "perfect" and incredible, just as it very easily occupies our time ( often not free time ) and entertains us ; but it's also very limited, so it is not worth replacing your "real life" time.<br>
-the internet can be very useful for learning new things, interacting with people from all over the world, personal improving, and even for sorts of important jobs and hobbies, which is why i love the internet and value it. but the internet can only stimulate our sight and hearing, and we have five senses. only real life can stimulate all five senses and bring us full life experiences full of sensations and feelings !!<br>
-you can't eat freshly picked wild berries, you can't feel the scent of flowers, you can't pet a fluffy animal, you can't hug people you love over the internet. don't substitute your real time for the virtual, it's not worth it. the internet has many limitations, it is inferior in comparison.<br>
-and just as all experiences are much more intense and wonderful in real life, you too can only be as perfect and better as possible in real life. the virtual identity that we create exists to allow us to introduce others who are far from us, we can put together the best visuals we can offer and we can also publish works and receive reviews and feedback, we can learn and improve ; but you really are much more special with all the details. your image and voice are not all you have to offer, you in real life are a complete person and if you focus on improving yourself as a whole and not only superficially, you can enjoy the virtual world and the world real in the best way possible : beneficial, fun and above all, healthy ♡ !<br>
-<br>
-these are subjects that i always see people having confused feelings about, and that also confused me a lot for several years ; ;<br>
-it's the kind of thing that gets in the way of our personal development, so i really hope that my texts are useful to you in some way ///<br>
-<br>
-<br>
-xoxo <img src="https://i.imgur.com/hETIlw2.gif"/><br>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/pdYOGop.gif"/></center>
 
 <br><br><br>
 
