--- a/portfolio.html
+++ b/portfolio.html
@@ -467,6 +467,13 @@ position: relative;
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> story games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/QWm8Eg7.gif"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/77Z0WH4.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> coding<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <a href="https://mega.nz/#!155gCTqa!i60sE35zeHFTOcm7KHpW5Hgsxq0H3mjzc9JQZ5nhS-I" target="_blank" id="linkzinhoinhoi">test .html</a>
